--- a/fx_grmv_picking_labels/views/wizard_stock_labels.xml
+++ b/fx_grmv_picking_labels/views/wizard_stock_labels.xml
@@ -6,10 +6,11 @@
         <field name="arch" type="xml">
             <form string="Imprimir">
                 <field name="state" invisible="1"/>
+                <field name="reports_file_ok" invisible="1"/>
                 <field name="labels_printed" invisible="1"/>
 
                 <sheet>
-                    <group>
+                    <group attrs="{'invisible':[('reports_file_ok','=',True)]}">
                         <group>
                             <field name="label_type" required="1" widget="radio"/>
                             <field name="platform_qty"
@@ -17,16 +18,28 @@
                                     'invisible' : [('label_type', '!=', 'stowage')],
                                     'required' : [('label_type', '=', 'stowage')]
                                 }"/>
+                                <field name="split_labels" />
                         </group>
                         <group/>
+                    </group>
+                    <group attrs="{'invisible':[('reports_file_ok','=',False)]}">
+                        <field name="report_file_ids" readonly="1">
+                            <tree string="Reportes" create="false">
+                                <field name="binary_file_name" invisible="1"/>
+                                <field name="binary_file" filename="binary_file_name" widget="binary"/>
+                            </tree>
+                        </field>
                     </group>
                     <h2 attrs="{'invisible' : [('labels_printed', '=', False)]}">
                         <span style="color: red">Etiquetas impresas previamente, ¿desea continuar?</span>
                     </h2>
                 </sheet>
-                <footer>
+                <footer attrs="{'invisible':[('reports_file_ok','=',True)]}">
                     <button type="object" name="print_labels" string="Generar etiquetas" class="oe_highlight"/>
                     <button special="cancel" string="Cancelar"/>
+                </footer>
+                <footer attrs="{'invisible':[('reports_file_ok','=',False)]}">
+                    <button special="cancel" string="Cerrar" icon="fa-window-close"/>
                 </footer>
             </form>
         </field>
