--- a/fx_grmv_picking_labels/views/wizard_stock_labels.xml
+++ b/fx_grmv_picking_labels/views/wizard_stock_labels.xml
@@ -18,7 +18,13 @@
                                     'invisible' : [('label_type', '!=', 'stowage')],
                                     'required' : [('label_type', '=', 'stowage')]
                                 }"/>
-                                <field name="split_labels" />
+                            <field name="platform2_qty"
+                                attrs="{
+                                    'invisible' : [('label_type', '!=', 'stowage'),('require_platform2_qty','=',False)],
+                                    'required' : [('label_type', '=', 'stowage'),('require_platform2_qty','=',True)]
+                                }"/>
+                            <field name="require_platform2_qty" invisible="1"/>
+                            <field name="split_labels" />
                         </group>
                         <group/>
                     </group>
